--- a/src/test/resources/config/remote.properties
+++ b/src/test/resources/config/remote.properties
@@ -4,7 +4,7 @@ browserSize=1920x1080
 headless=false
 timeout=10000
 baseUrl=https://app.maxibooking.ru
-remote=http://localhost:4444/wd/hub
+remote=https://user1:1234@selenoid.autotests.cloud/wd/hub/
 enableVNC=true
 enableVideo=true
-videoStorage=
+videoStorage=https://selenoid.autotests.cloud/video/
