--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           allure_results: allure-results
           allure_history: allure-history
-          keep_reports: 20
+          keep_reports: 5
       - name: Test marketplace action
         uses: simple-elf/allure-report-action@master
         if: always()
@@ -62,4 +62,4 @@ jobs:
           authToken: ${{secrets.GITHUB_TOKEN}}
           context: 'Test report'
           state: 'success'
-          target_url: https://kratakey.github.io/d8base-func-test/${{ github.run_number }}
+          target_url: https://kratakey.github.io/QAG25-diploma/${{ github.run_number }}
